--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -42,7 +42,7 @@
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.First}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+Alt+Home, macOS=⌘+⌥+Home}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Alt+Home, macOS=⌘+⌥+Home}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Button.IsVisible>
@@ -63,7 +63,7 @@
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.Prev}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+Alt+Up, macOS=⌘+⌥+Up}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Alt+Up, macOS=⌘+⌥+Up}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Up}"/>
@@ -89,7 +89,7 @@
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.Next}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+Alt+Down, macOS=⌘+⌥+Down}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Alt+Down, macOS=⌘+⌥+Down}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Down}"/>
@@ -103,7 +103,7 @@
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.Last}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+Alt+End, macOS=⌘+⌥+End}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Alt+End, macOS=⌘+⌥+End}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Button.IsVisible>
@@ -211,7 +211,7 @@
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.UseMerger}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+Shift+D, macOS=⌘+⇧+D}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Shift+D, macOS=⌘+⇧+D}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Path Width="12" Height="12" Stretch="Uniform" Data="{StaticResource Icons.OpenWith}"/>
