--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -98,7 +98,7 @@
                     <TextBlock>
                       <Run Text="{DynamicResource Text.InteractiveRebase.ReorderTip}"/>
                       <Run Text=" "/>
-                      <Run Text="{OnPlatform 'Ctrl+Up/Ctrl+Down', macOS='⌘+Up/⌘+Down'}" Foreground="{DynamicResource Brush.FG2}"/>
+                      <Run Text="{OnPlatform 'Ctrl+Up/Ctrl+Down', macOS='⌘+Up/⌘+Down'}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                     </TextBlock>
                   </ToolTip.Tip>
                   <Path Width="14" Height="14"
