--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -91,16 +91,28 @@
                                 Classes="line_path"
                                 Width="26" Height="26"
                                 Background="Transparent"
-                                IsChecked="{Binding EnableReflog, Mode=TwoWay}"
-                                ToolTip.Tip="{DynamicResource Text.Repository.EnableReflog}">
+                                IsChecked="{Binding EnableReflog, Mode=TwoWay}">
+                    <ToolTip.Tip>
+                      <TextBlock>
+                        <Run Text="{DynamicResource Text.Repository.ShowLostCommits}"/>
+                        <Run Text=" "/>
+                        <Run Text="--reflog" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
+                      </TextBlock>
+                    </ToolTip.Tip>
                     <Path Width="12" Height="12" Data="{StaticResource Icons.Reference}"/>
                   </ToggleButton>
                   <ToggleButton Grid.Column="3"
                                 Classes="line_path"
                                 Width="26" Height="26"
                                 Background="Transparent"
-                                IsChecked="{Binding EnableFirstParentInHistories, Mode=TwoWay}"
-                                ToolTip.Tip="{DynamicResource Text.Repository.FirstParentFilterToggle}">
+                                IsChecked="{Binding EnableFirstParentInHistories, Mode=TwoWay}">
+                    <ToolTip.Tip>
+                      <TextBlock>
+                        <Run Text="{DynamicResource Text.Repository.ShowFirstParentOnly}"/>
+                        <Run Text=" "/>
+                        <Run Text="--first-parent" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
+                      </TextBlock>
+                    </ToolTip.Tip>
                     <Path Width="12" Height="12" Data="{StaticResource Icons.FirstParentFilter}"/>
                   </ToggleButton>
                   <ToggleButton Grid.Column="4"
@@ -108,7 +120,7 @@
                                 Width="26" Height="26"
                                 Background="Transparent"
                                 IsChecked="{Binding OnlyHighlightCurrentBranchInHistories, Mode=TwoWay}"
-                                ToolTip.Tip="{DynamicResource Text.Repository.OnlyHighlightCurrentBranchInHistories}">
+                                ToolTip.Tip="{DynamicResource Text.Repository.OnlyHighlightCurrentBranchInGraph}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.LightOn}"/>
                   </ToggleButton>
                   <ToggleButton Grid.Column="5"
@@ -116,7 +128,7 @@
                                 Width="26" Height="26"
                                 Background="Transparent"
                                 IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=DisplayTimeAsPeriodInHistories, Mode=TwoWay}"
-                                ToolTip.Tip="{DynamicResource Text.Repository.UseRelativeTimeInHistories}">
+                                ToolTip.Tip="{DynamicResource Text.Repository.UseRelativeTimeInGraph}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.Stopwatch}"/>
                   </ToggleButton>
                   <Button Grid.Column="6"
