--- a/src/Views/RevisionFiles.axaml
+++ b/src/Views/RevisionFiles.axaml
@@ -154,7 +154,7 @@
                   <TextBlock>
                     <Run Text="{DynamicResource Text.OpenWith}"/>
                     <Run Text=" "/>
-                    <Run Text="{OnPlatform Ctrl+O, macOS=⌘+O}" Foreground="{DynamicResource Brush.FG2}"/>
+                    <Run Text="{OnPlatform Ctrl+O, macOS=⌘+O}" FontSize="11" Foreground="{DynamicResource MenuFlyoutItemKeyboardAcceleratorTextForeground}"/>
                   </TextBlock>
                 </ToolTip.Tip>
                 <Path Width="12" Height="12" Data="{StaticResource Icons.OpenWith}"/>
