--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -65,7 +65,6 @@
                ItemsSource="{Binding VisibleStashes}"
                SelectedItem="{Binding SelectedStash, Mode=TwoWay}"
                SelectionMode="Single"
-               DoubleTapped="OnStashListDoubleTapped"
                KeyDown="OnStashListKeyDown"
                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -89,6 +88,7 @@
                     BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="0,0,0,1"
                     Padding="4"
                     ContextRequested="OnStashContextRequested"
+                    DoubleTapped="OnStashDoubleTapped"
                     ToolTip.Tip="{Binding Message}">
               <Grid RowDefinitions="Auto,*" >
                 <Grid Grid.Row="0" ColumnDefinitions="*,Auto">
