--- a/src/Views/SetSubmoduleBranch.axaml
+++ b/src/Views/SetSubmoduleBranch.axaml
@@ -26,12 +26,7 @@
                  Text="{DynamicResource Text.SetSubmoduleBranch.Current}"/>
       <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
         <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
-        <TextBlock Margin="6,0,0,0"
-                   Text="{Binding Submodule.Branch, Mode=OneWay}"
-                   IsVisible="{Binding Submodule.Branch, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
-        <TextBlock Margin="6,0,0,0"
-                   Text="--"
-                   IsVisible="{Binding Submodule.Branch, Converter={x:Static StringConverters.IsNullOrEmpty}}"/>
+        <TextBlock Margin="6,0,0,0" Text="{Binding Submodule.Branch, Mode=OneWay}"/>
       </StackPanel>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
