--- a/src/Views/SubmodulesView.axaml
+++ b/src/Views/SubmodulesView.axaml
@@ -25,15 +25,29 @@
                 <TextBlock FontWeight="Bold" Margin="4,0,0,0" Text="{Binding Path}"/>
               </StackPanel>
 
-              <Grid RowDefinitions="24,24" ColumnDefinitions="Auto,Auto" Margin="0,8,0,0">
+              <Grid RowDefinitions="24,24,24" ColumnDefinitions="Auto,Auto" Margin="0,8,0,0">
                 <TextBlock Grid.Row="0" Grid.Column="0"
-                           Classes="info_label"
-                           HorizontalAlignment="Left" VerticalAlignment="Center"
-                           Text="{DynamicResource Text.CommitDetail.Info.SHA}"/>
+                               Classes="info_label"
+                               HorizontalAlignment="Left" VerticalAlignment="Center"
+                               Text="{DynamicResource Text.Submodule.Branch}"/>
                 <StackPanel Grid.Row="0" Grid.Column="1"
                             Orientation="Horizontal"
                             Margin="8,0,0,0">
-                  <TextBlock Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
+                  <Path Width="14" Height="14" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}"/>
+                  <TextBlock Margin="6,0,0,0" Text="{Binding Branch, Mode=OneWay}"/>
+                </StackPanel>
+                
+                <TextBlock Grid.Row="1" Grid.Column="0"
+                           Classes="info_label"
+                           HorizontalAlignment="Left" VerticalAlignment="Center"
+                           Text="{DynamicResource Text.CommitDetail.Info.SHA}"/>
+                <StackPanel Grid.Row="1" Grid.Column="1"
+                            Orientation="Horizontal"
+                            Margin="8,0,0,0">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Commit}"/>
+                  
+                  <TextBlock Margin="8,0,0,0"
+                             Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
                              VerticalAlignment="Center"/>
 
                   <Path Margin="6,0,0,0"
@@ -69,11 +83,11 @@
                   </Border>
                 </StackPanel>
 
-                <TextBlock Grid.Row="1" Grid.Column="0"
+                <TextBlock Grid.Row="2" Grid.Column="0"
                            Classes="info_label"
                            HorizontalAlignment="Left" VerticalAlignment="Center"
                            Text="{DynamicResource Text.Submodule.URL}"/>
-                <TextBlock Grid.Row="1" Grid.Column="1"
+                <TextBlock Grid.Row="2" Grid.Column="1"
                            Margin="8,0,0,0"
                            Text="{Binding URL}"
                            Foreground="{DynamicResource Brush.Link}"
@@ -156,13 +170,7 @@
                                 Orientation="Horizontal"
                                 Margin="8,0,0,0">
                       <Path Width="14" Height="14" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}"/>
-                      
-                      <TextBlock Margin="6,0,0,0"
-                                 Text="{Binding Branch, Mode=OneWay}"
-                                 IsVisible="{Binding Branch, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
-                      <TextBlock Margin="6,0,0,0"
-                                 Text="--"
-                                 IsVisible="{Binding Branch, Converter={x:Static StringConverters.IsNullOrEmpty}}"/>
+                      <TextBlock Margin="6,0,0,0" Text="{Binding Branch, Mode=OneWay}"/>
                     </StackPanel>
                     
                     <TextBlock Grid.Row="1" Grid.Column="0"
