feat: Add blame visibility condition and file size formatting
- Add conditional visibility binding to blame data display using a negated binary file flag converter.
- Format size property as human-readable file size using LongConverters.ToFileSize converter in UI display.

--- a/src/Views/Blame.axaml
+++ b/src/Views/Blame.axaml
@@ -92,7 +92,8 @@
                          FontFamily="{DynamicResource Fonts.Monospace}"
                          FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=EditorFontSize}"
                          TabWidth="{Binding Source={x:Static vm:Preferences.Instance}, Path=EditorTabWidth}"
-                         BlameData="{Binding Data}">
+                         BlameData="{Binding Data}"
+                         IsVisible="{Binding IsBinary, Converter={x:Static BoolConverters.Not}}">
         <ToolTip.IsOpen>
           <MultiBinding Converter="{x:Static BoolConverters.And}">
             <Binding Path="$self.IsPointerOver"/>
